# services/UserService/src/schemas/userSchemas.js
@@ -5,8 +5,8 @@ module.exports = {
       required: ['name', 'email'],
       properties: {
         name: { type: 'string' },
-        email: { type: 'string' }
-      }
+        email: { type: 'string' },
+      },
     },
     response: {
       200: {
@@ -14,18 +14,18 @@ module.exports = {
         properties: {
           id: { type: 'number' },
           name: { type: 'string' },
-          email: { type: 'string' }
-        }
-      }
-    }
+          email: { type: 'string' },
+        },
+      },
+    },
   },
 
   getUser: {
     params: {
       type: 'object',
       properties: {
-        id: { type: 'number' }
-      }
+        id: { type: 'number' },
+      },
     },
     response: {
       200: {
@@ -33,26 +33,26 @@ module.exports = {
         properties: {
           id: { type: 'number' },
           name: { type: 'string' },
-          email: { type: 'string' }
-        }
-      }
-    }
+          email: { type: 'string' },
+        },
+      },
+    },
   },
 
   updateUser: {
     params: {
       type: 'object',
       properties: {
-        id: { type: 'number' }
-      }
+        id: { type: 'number' },
+      },
     },
     body: {
       type: 'object',
       required: ['name', 'email'],
       properties: {
         name: { type: 'string' },
-        email: { type: 'string' }
-      }
+        email: { type: 'string' },
+      },
     },
     response: {
       200: {
@@ -60,27 +60,27 @@ module.exports = {
         properties: {
           id: { type: 'number' },
           name: { type: 'string' },
-          email: { type: 'string' }
-        }
-      }
-    }
+          email: { type: 'string' },
+        },
+      },
+    },
   },
 
   deleteUser: {
     params: {
       type: 'object',
       properties: {
-        id: { type: 'number' }
-      }
+        id: { type: 'number' },
+      },
     },
     response: {
       200: {
         type: 'object',
         properties: {
-          id: { type: 'number' }
-        }
-      }
-    }
+          id: { type: 'number' },
+        },
+      },
+    },
   },
 
   getAllUsers: {
@@ -92,10 +92,46 @@ module.exports = {
           properties: {
             id: { type: 'number' },
             name: { type: 'string' },
-            email: { type: 'string' }
-          }
-        }
-      }
-    }
-  }
+            email: { type: 'string' },
+          },
+        },
+      },
+    },
+  },
+
+  getUserConsumptions: {
+    params: {
+      type: 'object',
+      properties: {
+        id: { type: 'number' },
+      },
+      required: ['id'],
+    },
+    response: {
+      200: {
+        type: 'array',
+        items: {
+          type: 'object',
+          properties: {
+            id: { type: 'number' },
+            product_id: { type: 'number' },
+            date: { type: 'string' },
+            quantity: { type: 'number' },
+            sugar_intake: { type: 'number' },
+            salt_intake: { type: 'number' },
+            product: {
+              type: 'object',
+              properties: {
+                id: { type: 'number' },
+                description: { type: 'string' },
+                name: { type: 'string' },
+                sugar_intake: { type: 'number' },
+                salt_intake: { type: 'number' },
+              },
+            },
+          },
+        },
+      },
+    },
+  },
 };
